--- a/css/style.css
+++ b/css/style.css
@@ -130,3 +130,127 @@ figure{
 	float: left;
 	margin-top: 100px;
 }
+
+.left-services{
+	background-color: red;
+	width: 400px;
+	float: left;
+}
+
+.left-services li{
+	position: relative;
+	text-align: right;
+	padding-right: 60px;
+	background: pink;
+	margin-bottom: 10px;
+}
+
+.left-services img{
+	position: absolute;
+	right: 0;
+	top: 0;
+}
+
+.right-services li{
+	position: relative;
+	padding-left: 60px;
+}
+.right-services img{
+	position: absolute;
+	left: 0;
+	top: 0;
+}
+
+.cellphone{
+	width: 400px;
+	background:yellow;
+	text-align: center;
+	float: left;
+}
+
+
+.right-services{
+	background-color: green;
+	width: 400px;
+	float: left;
+}
+
+.pricing-table{
+	background: url(../images/pricing-bg.jpg) center top no-repeat;
+	background-size: contain;
+	margin-top: -100px;
+}
+
+.pricing-table h3{
+	text-align: center;
+	margin: 0;
+	padding: 50px 0;
+	color: red;
+	font-size: 40px;
+}
+
+.price-table{
+	background-color: rgba(255,0,0,0.2);
+	box-shadow: 
+		0 0 10px #000,
+		-5px -5px 10px rgba(0,0,0,0.5) inset,
+		-5px -5px 10px red,
+		-10px -10px 10px green,
+		-15px -15px 10px orange
+		;
+	width: 270px;
+	padding: 15px;
+	float: left;
+	margin-right: 40px;
+	border-radius: 20px;
+}
+
+.price-table:last-of-type{
+	margin-right: 0;
+}
+
+/*.no-margin{
+	margin: 0;
+}*/
+
+/* pseudo selectores
+
+	selector:pseudo-selector{
+		mi regla
+	}
+
+	:last-child
+
+*/
+
+
+.main-footer{
+	background-color: #418BB5;
+	margin-top: 50px;
+}
+
+.main-footer h3{
+	text-align: center;
+	font-size: 30px;
+	color: #fff;
+	margin: 0;
+	padding: 30px 0;
+	text-shadow: 
+		3px 3px 5px black,
+		6px 6px 5px red,
+		9px 9px 5px green,
+		12px 12px 5px violet;
+}
+
+.bg-dark{
+	background-color: #284655;
+}
+
+.copyright{
+	float: left;
+	margin: 0;
+}
+
+.footer-nav{
+	float: right;
+}
