--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,9 @@ body{
 		margin-left: ;
 	*/
 }
+img{
+	max-width: 100%;
+}
 
 /* Resets */
 
@@ -54,7 +57,7 @@ figure{
 */
 
 .main-header{
-	width: 1200px;
+	max-width: 1200px;
 	margin: auto;
 	padding: 20px 0;
 }
@@ -75,6 +78,7 @@ figure{
 .main-nav li{
 	float: left;
 	margin: 5px 0 0 15px;
+	text-transform: uppercase;
 }
 
 .main-nav a{
@@ -92,7 +96,7 @@ figure{
 }
 
 .container{
-	width: 1200px;
+	max-width: 1200px;
 	margin: auto;
 }
 
@@ -115,7 +119,7 @@ figure{
 }
 
 .register input{
-	width: 1000px;
+	width: 83%;
 	height: 60px;
 	font-size: 16px;
 	padding: 0 15px;
@@ -125,18 +129,19 @@ figure{
 .register button{
 	border: none;
 	background-color: #06B4F2;
-	width: 195px;
+	width: 16%;
 	height: 60px;
 	color: #fff;
 	font-family: inherit;
 	font-size: 16px;
+	text-transform: uppercase;
 }
 
 .producto{
-	width: 300px;
+	width: 25%;
 	text-align: center;
 	float: left;
-	margin-top: 100px;
+	margin-top: 8%;
 	padding: 0 15px;
 }
 
@@ -148,17 +153,18 @@ figure{
 	text-align: center;
 	margin-top: 100px;
 	font-size: 40px;
-	margin-bottom: 0;
+	margin-bottom: 15px;
 }
 
 .title-services + p{
 	text-align: center;
 	margin: 0 0 100px;
 	font-size: 16px;
+	color: grey;
 }
 
 .left-services{
-	width: 400px;
+	width: 33.333%;
 	float: left;
 }
 
@@ -186,13 +192,13 @@ figure{
 }
 
 .cellphone{
-	width: 400px;
+	width: 33.333%;
 	text-align: center;
 	float: left;
 }
 
 .right-services{
-	width: 400px;
+	width: 33.333%;
 	float: left;
 }
 
@@ -222,11 +228,11 @@ figure{
 		-10px -10px 10px green,
 		-15px -15px 10px orange*/
 		;
-	width: 270px;
+	width: 22.5%;
 	padding: 30px;
 	float: left;
 	margin-top: 60px;
-	margin-right: 40px;
+	margin-right: 3.33%;
 	border-radius: 5px;
 	text-align: center;
 }
@@ -268,26 +274,11 @@ figure{
 	text-decoration: none;
 	padding: 10px;
 	text-transform: uppercase;
-	letter-spacing: 2px;
 }
 
 .price-table:last-of-type{
 	margin-right: 0;
 }
-
-/*.no-margin{
-	margin: 0;
-}*/
-
-/* pseudo selectores
-
-	selector:pseudo-selector{
-		mi regla
-	}
-
-	:last-child
-
-*/
 
 
 .main-footer{
@@ -302,11 +293,6 @@ figure{
 	margin: 0;
 	padding: 60px 0;
 	font-weight: 400;
-	/*text-shadow:
-		3px 3px 5px black,
-		6px 6px 5px red,
-		9px 9px 5px green,
-		12px 12px 5px violet;*/
 }
 
 .main-footer h3 span{
@@ -341,4 +327,168 @@ figure{
 	color: #fff;
 	text-decoration: none;
 	font-weight: 100;
+}
+
+
+
+/*Banner form contacto*/
+#banner-contact{
+	background: url(../images/indexbanner-bg2.jpg); center top no-repeat;
+	background-size: cover;
+}
+
+/*texto banner form contacto*/
+
+.contact-banner-title{
+	font-size: 50px;
+	color: #fff;
+	padding-top: 150px;
+	margin-top: 20px;
+}
+
+.contact-banner-text{
+	font-size: 20px;
+	color: #fff;
+	padding-bottom: 150px;
+}
+
+
+.form-contact{
+	width: 	100%;
+}
+.contact-form-left, .contact-form-right{
+	float: 	left;	
+	width: 	50%;
+}
+.contact-form-left input{
+	width: 	100%;
+	height: 60px;
+	border: 1px solid #cbd0cb;
+	font-family: inherit;
+	font-size: 14px;
+	border-radius: 1px;
+	padding-left: 10px;
+	margin-bottom: 10px;
+	margin-right: 3.33%;
+}
+
+.contact-form-right input{
+	width: 	100%;
+	height: 200px;
+	border: 1px solid #cbd0cb;
+	font-family: inherit;
+	font-size: 14px;
+	border-radius: 1px;
+	padding-left: 10px;
+	margin-bottom: 10px;
+	margin-left: 3.33%;
+}
+.button-form{
+	text-align: center;
+	width: 100%;
+}
+
+.button-submit{
+	background-color: #06B4F2;
+	border: none;
+	color: #fff;
+	font-family: inherit;
+	text-transform: uppercase;
+	width: 11%;
+	padding-top: 13px;
+	padding-bottom: 13px;
+	font-size: 14px;
+	margin-top: 20px;
+	letter-spacing: 1.5px;
+	border-radius: 4px;
+}
+
+
+
+
+@media (max-width:800px) {
+	.container, .main-header{
+		width: 95%;
+	}
+
+	.producto{
+		width: 50%;
+		margin-top: 80px;
+	}
+	.left-services, .cellphone, .right-services{
+		float: none;
+		width: 100%;
+	}
+	.pricing-table{
+		margin-top: 0;
+	}
+	.price-table{
+		width: 48%;
+		margin-right: 4%;
+	}
+	.price-table:nth-of-type(even){
+		margin-right: 0;
+	}
+
+	.price-table h4{
+		font-size: 15px;
+	}
+	.price-table table {
+		font-size: 12px;
+	}
+}	
+@media (max-width:600px) {
+		.container, .main-header{
+			width: 95%
+		}
+		.logo{
+			float: none;
+			text-align: center;
+			display: block;
+		}
+		.main-nav ul li{
+			float: none;
+			display: block;
+			text-align: center;
+		}
+		.banner-title, .banner-text{
+			display: none;
+		}
+		#banner{
+			background: none;
+		}
+
+		.title-services{
+			margin-bottom: 15px;
+		}
+		.left-services img{
+			position: absolute;
+			left: 0;
+			top: 0;
+		}
+		.left-services li{
+			position: relative;
+			text-align: left;
+			padding-left: 60px;
+		}	
+}
+@media (max-width: 400px){
+	.container, .main-heder{
+		width: 95%;
+	}
+	.producto{
+		width: 100%;
+		margin-top: 40px;
+	}
+	.register input{
+		width: 75%;
+		font-size: 13px;
+	}
+	.register button{
+		width: 15%;
+		font-size: 13px;
+	}
+	.price-table h4{
+		font-size: 11px;
+	}
 }
